# Wash

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/: ANSIParser.h  auto_completion.h  constants.h  options.h  shell.h  shortcut.h  status_line.h  tab.h  theme.h
include/command/: cat.h  cd.h  command.h  command_registry.h  cp.h  echo.h  ls.h  mkdir.h  mv.h  rm.h  rmdir.h  touch.h  w_pwd.h  whoami.h
src/: ANSIParser.cpp  completions.cpp  key_press.cpp  parse_and_execute_command.cpp  run_shell.cpp  shell.cpp  status_line.cpp  tab.cpp
src/auto_complete/: completions.cpp
src/command/: cat.cpp  cd.cpp  cp.cpp  echo.cpp  ls.cpp  mkdir.cpp  mv.cpp  register_commands.cpp  rm.cpp  rmdir.cpp  touch.cpp  w_pwd.cpp  whoami.cpp
src/settings/: constants.h  options.h
src/utils/: constants.h  helper.h
